--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -48,3 +48,12 @@ body, html {
   background-color: #393f4d;
   grid-column: 1 / 3;
 }
+
+/* MY SOLUTION */
+.container{
+  display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: 12.5% 12.5% 62.5% 12.5%;
+  gap: 15px;
+  position: absolute;
+}
