--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,53 @@
   font-size: 13px;
   font-weight: normal;  
 }
+
+/* MY SOLUTION */
+.container{
+  display: grid;
+  grid-template-columns: 20% 80%;
+  gap: 4px;
+}
+.header{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+.menu{
+  align-self: center;
+}
+.logo{
+  justify-self: start;
+}
+.menu ul{
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+}
+.menu li, .nav li{
+  list-style: none;
+}
+.nav ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.sidebar{
+  display: grid;
+  gap: 50px;
+}
+.article{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px; 
+}
+.article .card{
+  height: 200px; 
+}
+.header, .footer{
+  grid-column: 1/3;
+}
+.sidebar{
+  grid-row: 2/4;
+}
+.side-content, .photo {
+  display: grid; 
+  align-items: center;
+}
