--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -25,3 +25,33 @@ button {
   background: white;
   border: 1px solid #eee;
 }
+
+/* MY SOLUTION */
+.card{
+  padding: 8px;
+}
+.title{
+  font-size: 16px;
+  padding: 8px;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+.content{
+  margin-bottom: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.button-container{
+  padding:8px;
+  text-align: center;
+}
+button{
+  display: block;
+  margin: 0 auto;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
