--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -23,3 +23,16 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* MY SOLUTION */
+.header{
+  display: flex;
+  padding: 5px;
+  align-items: center;
+  justify-content: space-between;
+}
+ul{
+  display: flex;
+  margin: 0;
+  gap: 10px;
+}
