--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,19 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* MY SOLUTION */
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+ul{
+  display: flex;
+  gap: 16px;
+}
+.site, .profile{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
