--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,80 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* MY SOLUTION */
+/* .header{
+  display: flex;
+  position: absolute;
+  top: 0;
+  padding: 5px;
+}
+ul{
+  display: flex;
+  gap: 10px;
+}
+li{
+  list-style-type: none;
+}
+a{
+  text-decoration: none;
+  color: gray;
+}
+.left-links{
+  
+}
+.right-links{
+  display: flex;
+  right: 10px;
+}
+.footer{
+  display:flex;
+  position: absolute;
+  bottom: 0;
+  padding: 5px;
+  background-color: #eeeeee;
+}
+.content{
+  
+  
+} */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  padding: 8px 16px;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+  background: #eee;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px
+}
